# paul-gpt

./: .gitignore  LLM_exploratory.ipynb  README.md  attention_decoder.py  gpt_utils.py  pyproject.toml  train_decoder.ipynb
old/: LLM_exploratory.ipynb
src/: train_decoder.ipynb
src/paul_gpt/: __init__.py  attention_decoder.py  gpt_utils.py  hyperparams.py
